Update to LESS nesting for navigation

--- a/css/index.css
+++ b/css/index.css
@@ -158,7 +158,7 @@ body {
   width: 70px;
   text-align: right;
 }
-.nav-bar nav li nav li a {
+.nav-bar nav li a {
   text-decoration: none;
   color: black;
 }
