--- a/less/index.less
+++ b/less/index.less
@@ -57,6 +57,10 @@ html, body {
     height: 100%;
 }
 
+
+
+
+
 body {
 	margin: 0px 30px;
 }
@@ -149,4 +153,19 @@ h1 {
 	font-weight: bold;
 }
 
+
+
+
+
+/* MEDIA QUERIES */
+
+@media (max-width: 500px) {
+	.nav-bar {
+		justify-content: center;
+		
+		nav li {
+			text-align: center;
+		}
+	}
+}
 
