Update font on mixin .font-class to Quicksand

--- a/less/index.less
+++ b/less/index.less
@@ -79,7 +79,7 @@ body {
 }
 
 .font-class {
-	font-family: 'Helvetica', sans-serif;
+	font-family: 'Quicksand', sans-serif;
 	font-size: 18px;
 	font-weight: lighter;
 }
