--- a/css/index.css
+++ b/css/index.css
@@ -143,7 +143,7 @@ body {
   display: flex;
 }
 .font-class {
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-size: 18px;
   font-weight: lighter;
 }
@@ -205,7 +205,7 @@ h3,
 p,
 th,
 td {
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-size: 18px;
   font-weight: lighter;
 }
