--- a/less/index.less
+++ b/less/index.less
@@ -90,6 +90,10 @@ body {
 	height: auto;
 }
 
+.border-class {
+	border: 1px solid black;
+}
+
 
 /* NAVIGATION */
 
@@ -135,7 +139,7 @@ body {
 		height: 25px;
 		background-color: black;
 		color: white;
-		border: 1px solid black;
+		.border-class();
 		border-radius: 8px;
 		font-size: 14px;
 	}
@@ -167,12 +171,36 @@ h1 {
 	.section-class();
 	
 	.about {
-		width: 500px;
+		width: 350px;
 	}
 	.skills {
-		width: 200px;
+		width: 350px;
+		.flexbox-class();
+		flex-direction: column;
+		align-items: center;
+
+		h3 {
+			text-align: center;	
+		}
+
+		.skills-table {
+			text-align: center;
+			.border-class();
+			margin: 20px 0px;
+			width: 200px;
+
+			tr {
+				.border-class();
+			}
+
+			td {
+				padding: 10px;
+			}
+		}
 	}
 }
+
+
 
 
 /* MEDIA QUERIES */
@@ -186,4 +214,5 @@ h1 {
 		}
 	}
 }
+
 
