--- a/less/index.less
+++ b/less/index.less
@@ -54,7 +54,7 @@ table {
 }
 
 html, body {
-    height: 100%;
+    height: auto;
 }
 
 
@@ -172,35 +172,68 @@ h1 {
 	
 	.about {
 		width: 350px;
+		margin: 20px 0px;
 	}
 	.skills {
 		width: 350px;
 		.flexbox-class();
 		flex-direction: column;
 		align-items: center;
+		padding: 20px;
+		background-color: teal;
+		margin: 20px 0px;
 
 		h3 {
 			text-align: center;	
+			color: white;
+		}
+
+		.underline {
+			width: 100%;
+			color: white;
 		}
 
 		.skills-table {
 			text-align: center;
-			.border-class();
 			margin: 20px 0px;
 			width: 200px;
 
-			tr {
-				.border-class();
-			}
-
 			td {
 				padding: 10px;
+				color: white;
 			}
 		}
 	}
 }
 
 
+/* BOTTOM SECTION */
+
+.bottom-section {
+	.flexbox-class();
+	flex-direction: column;
+	align-items: center;
+	.section-class();
+
+	.work-table {
+		.border-class();
+			margin: 20px 0px;
+			width: 200px;
+
+			th {
+				.border-class();
+			}
+
+			tr {
+				.border-class();
+			}
+
+			td {
+				padding: 10px 25px;
+				.border-class();
+			}
+	}
+}
 
 
 /* MEDIA QUERIES */
@@ -214,5 +247,3 @@ h1 {
 		}
 	}
 }
-
-
